--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,12 @@
 
 </head>
 <body>
-<noscript>
-  <strong>We're sorry but Angular demo doesn't work properly without JavaScript enabled. Please enable it to
-    continue.</strong>
-</noscript>
 <app-root></app-root>
+<noscript>
+  <strong>
+    We're sorry but Angular demo doesn't work properly without JavaScript enabled. Please enable it to
+    continue.
+  </strong>
+</noscript>
 </body>
 </html>
