--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="Description" content="Angular Demo.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#f48c5b">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 
 </head>
